--- a/static/index.html
+++ b/static/index.html
@@ -125,6 +125,28 @@
             transform: translateY(0);
         }
 
+        /* Prominent Analyze Market Button */
+        #analyze-btn {
+            background: linear-gradient(135deg, #10b981 0%, #059669 100%);
+            color: white;
+            font-weight: 700;
+            font-size: 1.1rem;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            box-shadow: 0 4px 12px rgba(16, 185, 129, 0.4);
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        #analyze-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 20px rgba(16, 185, 129, 0.5);
+            filter: brightness(1.1);
+        }
+
+        #analyze-btn:active {
+            transform: translateY(0);
+        }
+
         /* Dashboard Grid */
         .dashboard-grid {
             display: grid;
