--- a/static/index.html
+++ b/static/index.html
@@ -585,47 +585,70 @@
                 return;
             }
             const isMobile = window.innerWidth < 768;
+
+            // Convert prices to returns (%) so бары показывают, насколько модель
+            // угадала направление/величину движения
+            const base = backtest.base_price || [];
+            const predPrices = backtest.target_price_pred || [];
+            const truePrices = backtest.target_price_true || null;
+
+            const predReturns = [];
+            const trueReturns = truePrices ? [] : null;
+
+            for (let i = 0; i < base.length; i++) {
+                const b = base[i];
+                const p = predPrices[i];
+                if (typeof b === 'number' && typeof p === 'number' && b !== 0) {
+                    predReturns.push(((p - b) / b) * 100.0);
+                } else {
+                    predReturns.push(null);
+                }
+                if (trueReturns) {
+                    const t = truePrices[i];
+                    if (typeof b === 'number' && typeof t === 'number' && b !== 0) {
+                        trueReturns.push(((t - b) / b) * 100.0);
+                    } else {
+                        trueReturns.push(null);
+                    }
+                }
+            }
+
             const layout = {
                 paper_bgcolor: '#1e293b',
                 plot_bgcolor: '#1e293b',
                 font: {family: 'Inter, sans-serif', color: '#94a3b8', size: isMobile ? 10 : 12},
-                margin: {t: 20, r: 10, l: 35, b: 30},
+                margin: {t: 20, r: 10, l: 40, b: 40},
                 xaxis: {gridcolor: '#334155', zerolinecolor: '#334155'},
-                yaxis: {gridcolor: '#334155', zerolinecolor: '#334155', title: 'Price'},
+                yaxis: {
+                    gridcolor: '#334155',
+                    zerolinecolor: '#334155',
+                    title: 'Return (%)'
+                },
                 hovermode: 'x unified',
                 showlegend: !isMobile,
-                legend: {orientation: 'h', y: 1.1}
+                legend: {orientation: 'h', y: 1.1},
+                barmode: trueReturns ? 'group' : 'relative'
             };
-            const traces = [
-                {
-                    x: backtest.dates,
-                    y: backtest.base_price,
-                    type: 'scatter',
-                    mode: 'lines',
-                    line: {color: '#9ca3af', width: 1.5},
-                    name: 'Base Price'
-                }
-            ];
-            if (backtest.target_price_true) {
+
+            const traces = [];
+            if (trueReturns) {
                 traces.push({
                     x: backtest.dates,
-                    y: backtest.target_price_true,
-                    type: 'scatter',
-                    mode: 'lines',
-                    line: {color: '#4b5563', width: 1, dash: 'dot'},
-                    name: 'True Target Price'
+                    y: trueReturns,
+                    type: 'bar',
+                    marker: {color: '#4b5563'},
+                    name: 'True Return'
                 });
             }
-            if (backtest.target_price_pred) {
-                traces.push({
-                    x: backtest.dates,
-                    y: backtest.target_price_pred,
-                    type: 'scatter',
-                    mode: 'lines',
-                    line: {color: '#10b981', width: 2},
-                    name: 'Predicted Target Price'
-                });
-            }
+            traces.push({
+                x: backtest.dates,
+                y: predReturns,
+                type: 'bar',
+                marker: {color: '#10b981'},
+                name: 'Predicted Return',
+                opacity: trueReturns ? 0.7 : 1.0
+            });
+
             Plotly.newPlot(div, traces, layout, {responsive: true, displayModeBar: false});
         }
 
@@ -744,19 +767,23 @@
                 };
             }
 
-            // Forecast Logic — show only target point instead of flat dotted line
+            // Forecast Logic — target point + uncertainty cone (based on ATR)
             let forecastTrace = null;
+            let coneTraces = [];
             if (signal && typeof signal.target_price === 'number') {
                 const lastDate = data.dates[data.dates.length - 1];
+                const lastClose = data.close[data.close.length - 1];
                 const d = new Date(lastDate);
                 const steps = horizonDays || 7;
                 d.setDate(d.getDate() + steps);
                 const targetDate = d.toISOString().split('T')[0];
 
+                // color by action
                 let color = '#3b82f6';
                 if (signal.action === 'BUY') color = '#10b981';
                 if (signal.action === 'SELL') color = '#ef4444';
 
+                // central target point
                 forecastTrace = {
                     x: [targetDate],
                     y: [signal.target_price],
@@ -769,6 +796,46 @@
                     },
                     name: `Target (${steps}d)`
                 };
+
+                // ATR-based cone around forecast path
+                const atrSeries = data.atr || null;
+                let atrValue = null;
+                if (Array.isArray(atrSeries) && atrSeries.length === data.dates.length) {
+                    atrValue = atrSeries[atrSeries.length - 1];
+                } else if (typeof signal.atr_14 === 'number') {
+                    atrValue = signal.atr_14;
+                }
+
+                if (typeof atrValue === 'number' && !isNaN(atrValue)) {
+                    const scale = Math.sqrt(Math.max(steps, 1) / 14.0);
+                    const band = atrValue * scale;
+                    const xCone = [lastDate, targetDate];
+                    const lower = [lastClose - band, signal.target_price - band];
+                    const upper = [lastClose + band, signal.target_price + band];
+
+                    const lowerTrace = {
+                        x: xCone,
+                        y: lower,
+                        type: 'scatter',
+                        mode: 'lines',
+                        line: {width: 0},
+                        showlegend: false,
+                        hoverinfo: 'skip'
+                    };
+
+                    const upperTrace = {
+                        x: xCone,
+                        y: upper,
+                        type: 'scatter',
+                        mode: 'lines',
+                        fill: 'tonexty',
+                        fillcolor: 'rgba(59, 130, 246, 0.15)',
+                        line: {width: 0},
+                        name: `Forecast cone ±${band.toFixed(4)}`
+                    };
+
+                    coneTraces = [lowerTrace, upperTrace];
+                }
             }
 
             const traces = [];
@@ -831,6 +898,9 @@
                 line: {color: '#ffffff', width: 2.5}, name: 'Original'
             });
             
+            if (coneTraces.length > 0) {
+                traces.push.apply(traces, coneTraces);
+            }
             if (forecastTrace) traces.push(forecastTrace);
 
             Plotly.newPlot('mainChart', traces, commonLayout, {responsive: true, displayModeBar: false});
